first section adaptiv

--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,18 @@
           <img
             class="promo__image"
             src="../src/images/section/image_Museum.jpg"
-            alt="Музей"
+            alt="Музей з колонами"
+          >
+          <img
+            class="promo__image promo__image--large"
+            src="../src/images/section/image_Museum-large.jpg"
+            alt="Музей з колонами"
+          >
+
+          <img
+            class="promo__image promo__image--long"
+            src="../src/images/section/image_Museum-long.jpg"
+            alt="Музей з колонами"
           >
         </div>
 
@@ -80,8 +91,8 @@
               <span class="button__icon"></span>
             </div>
           </a>
+          <a class="promo__link" href="#">Події</a>
         </div>
-        <a class="promo__link" href="#">Події</a>
       </section>
       <section class="event" id="event">
         <h2 class="heading event__heading">Актуальні події</h2>
