--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,12 @@
           <h1 class="header__name">
             худож<br>музей
           </h1>
-          <button class="header__button">квитки</button>
+          <h1 class="header__name2">
+            художній музей
+          </h1>
+          <button class="header__button">
+            <span class="button-text">квитки</span>
+          </button>
         </div>
       </div>
       <div class="header__rightside">
@@ -98,6 +103,7 @@
       <div class="gallery">
         <h2 class="gallery__heading">Галерея</h2>
         <div class="gallery__pictures">
+
           <img
             class="gallery__photo"
             src="images/Rectangle 13.5.png"
@@ -128,6 +134,15 @@
             src="images/Rectangle 25.png"
             alt="Картина з галереї"
           >
+
+          <div class="gallery__pointer-left"><</div>
+          <div class="gallery__pointer-right">></div>
+        </div>
+        <div class="gallery__slider">
+          <div class="gallery__slider-dot"></div>
+          <div class="gallery__slider-dot"></div>
+          <div class="gallery__slider-dot"></div>
+          <div class="gallery__slider-dot"></div>
         </div>
         <button class="gallery__button">></button>
       </div>
@@ -186,7 +201,7 @@
         </div>
       </div>
       <div class="footer__rightside">
-        <div class="footer__menu-block">
+        <div class="footer__menu-blockleft">
           <p>
             Галерея<br><br><br>
             Виставки та події<br><br><br>
@@ -194,7 +209,7 @@
             Стати нашим другом
           </p>
         </div>
-        <div class="footer__menu-block">
+        <div class="footer__menu-blockright">
           <p>
             Про Нас<br><br><br>
             Магазин<br><br><br>
