header + some content

--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;800&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <header class="header">
+      <div class="header__container content-container">
+        <div class="header__top">
+          <label for="burger" class="header__burger">
+            <input
+              class="header__input"
+              type="checkbox"
+              id="burger"
+            >
+          </label>
+          <img
+            src="./images/NA_MU.png"
+            alt="NA MU"
+            class="header__logo"
+          >
+          <div></div>
+        </div>
+        <div class="header__bg">
+        </div>
+        <div class="left-side">
+          <div class="header__content">
+            <h1 class="header__title">Худож<span class="header__title--active">ній</span><br>музей</h1>
+            <div class="header__button-section">
+              <button class="header__button">Квитки</button>
+              <div class="header__arrow">></div>
+            </div>
+          </div>
+          <p class="header__event">Події</p>
+        </div>
+      </div>
+    </header>
+    <main>
+      <section class="current-events content-container">
+        <h2 class="current-events__title">Актуальні події</h2>
+        <div class="current-events__row">
+          <div class="current-events__photo">
+            <img
+              class="current-events__img"
+              src="./images/events1.png"
+              alt=""
+            >
+          </div>
+          <div class="current-events__info">
+            <div class="current-events__about">
+              <span class="current-events__caption">Виставка</span>
+              <span class="current-events__date">26.08-29.11.2019</span>
+            </div>
+            <h3 class="current-events__heading">Йду і повертаюсь</h3>
+            <p class="current-events__text">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+          </div>
+        </div>
+      </section>
+    </main>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
