--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,8 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <header class="header header--gap">
+    <header class="header">
       <div class="header__content container">
-        <div class="header__hero-img"></div>
-        <div class="header__logo logo">NA<br>MU</div>
         <div class="header__menu">
           <svg
             width="18"
@@ -24,44 +22,71 @@
           >
             <path d="M0 12H18V10H0V12ZM0 7H18V5H0V7ZM0 0V2H18V0H0Z" fill="#0F0E08">
           </svg>
+          <nav class="header__nav">
+          </nav>
         </div>
-        <div class="header__info">
-          <h1 class="header__title">Худож<span class="header__title--white">ній</span><br>музей</h1>
-          <a href="#" class="header__link">Квитки<span class="header__button button"></span></a>
-        </div>
-        <div class="header__events">
-          <p class="header__text">Події</p>
-        </div>
+        <div class="header__logo logo"></div>
       </div>
     </header>
 
+    <!-- <section>
+      <div class="header__hero-img"></div>
+      <div class="header__menu">
+        <svg
+          width="18"
+          height="12"
+          viewBox="0 0 18 12"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path d="M0 12H18V10H0V12ZM0 7H18V5H0V7ZM0 0V2H18V0H0Z" fill="#0F0E08">
+        </svg>
+      </div>
+
+      <div class="header__events">
+        <p class="header__text">Події</p>
+      </div>
+    </section> -->
+
     <main class="main">
+      <section class="main__hero main__hero--gap hero container">
+        <div class="hero__content-left">
+          <div class="hero__events">
+            <p class="hero__text">Події</p>
+          </div>
+        </div>
+        <div class="hero__content-right">
+          <div class="hero__info">
+            <h1 class="hero__title">Худож<span class="hero__title--white">ній</span><br>музей</h1>
+            <a href="#" class="hero__link">Квитки<span class="hero__button button"></span></a>
+          </div>
+        </div>
+      </section>
+
       <section class="main__events main__events--gap container">
         <h2 class="main__current-title title">Актуальні події</h2>
         <article class="main__event event">
           <img
             src="./images/evets/event-left.png"
-            alt=""
+            alt="кримські сосни на у горах"
             class="event__img"
           >
           <div class="event__info event__info--gap">
-            <p class="event__type">ВИСТАВКА <span class="event__date">26.08-29.11.2019</span></p>
+            <p class="event__type">Виставка <span class="event__date">26.08-29.11.2019</span></p>
             <h3 class="event__title event__title--red-box">Йду і повертаюсь</h3>
             <p class="event__text">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
           </div>
         </article>
         <article class="main__event--reverse event">
           <div class="event__info event__info--gap">
-            <p class="event__type">
-              ВИСТАВКА
-              <span class="event__date">26.08-29.11.2019</span>
+            <p class="event__type">Виставка<span class="event__date">26.08-29.11.2019</span>
             </p>
             <h3 class="event__title event__title--red-box">I  спогади і мрії </h3>
             <p class="event__text">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
           </div>
           <img
             src="./images/evets/event-right.png"
-            alt=""
+            alt="юна дівчина та павлін"
             class="event__img"
           >
         </article>
@@ -76,45 +101,67 @@
 
       <section class="main__gallery main__gallery--gap gallery">
         <div class="gallery__content container">
-          <h3 class="gallery__title">Галерея</h3>
+          <h3 class="gallery__title title">Галерея</h3>
           <div class="gallery__image">
             <img
               src="images/gallery/1.png"
-              alt=""
+              alt="жінка в старовинному одязі для весілля"
               class="gallery__image--1"
             >
             <img
               src="images/gallery/2.png"
-              alt=""
+              alt="сільський хутір в зимку"
               class="gallery__image--2"
             >
             <img
               src="images/gallery/3.png"
-              alt=""
+              alt="гуси на пасовищщі"
               class="gallery__image--3"
             >
             <img
               src="images/gallery/4.png"
-              alt=""
+              alt="люди відпочиваюсь у парку"
               class="gallery__image--4"
             >
             <img
               src="images/gallery/5.png"
-              alt=""
+              alt="юрба осіб пірная в море"
               class="gallery__image--5"
             >
             <img
               src="images/gallery/6.png"
-              alt=""
+              alt="нарада селищі"
               class="gallery__image--6"
             >
           </div>
           <button class="gallery__button button"></button>
+          <div class="gallery__radio radio">
+            <input
+              type="radio"
+              name="radio-button"
+              class="radio__button radio__button--active"
+            >
+            <input
+              type="radio"
+              name="radio-button"
+              class="radio__button"
+            >
+            <input
+              type="radio"
+              name="radio-button"
+              class="radio__button"
+            >
+            <input
+              type="radio"
+              name="radio-button"
+              class="radio__button"
+            >
+          </div>
         </div>
       </section>
 
-      <section class="main__subscribe main__subscribe--gap subscribe">
-        <div class="subscribe__info">
+      <section class="main__subscribe main__subscribe--gap  subscribe">
+        <div class="subscribe__info container">
           <h3 class="subscribe__title title">Підписка</h3>
           <p class="subscribe__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
           <form class="subscribe__form">
@@ -135,89 +182,72 @@
 
     <footer class="footer">
       <div class="footer__content container">
-        <div class="footer__content--left">
-          <div class="footer__visualisation">
-            <div class="footer__logo logo">NA<br>MU</div>
-            <div class="footer__public public">
-              <span class="public__facebook-icon">
-                <svg
-                  width="12"
-                  height="24"
-                  viewBox="0 0 12 24"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path d="M2.7196 4.64899C2.7196 5.2538 2.7196 7.9533 2.7196 7.9533H0.302532V11.9938H2.7196V24.0009H7.68478V11.9942H11.0166C11.0166 11.9942 11.3287 10.0568 11.4799 7.93841C11.0463 7.93841 7.70355 7.93841 7.70355 7.93841C7.70355 7.93841 7.70355 5.58776 7.70355 5.17573C7.70355 4.76282 8.24491 4.2074 8.77997 4.2074C9.31402 4.2074 10.4412 4.2074 11.4852 4.2074C11.4852 3.65727 11.4852 1.75647 11.4852 0.000976577C10.0915 0.000976577 8.50592 0.000976577 7.80701 0.000976577C2.59687 0.000697581 2.7196 4.04524 2.7196 4.64899Z" fill="black">
-                </svg>
-              </span>
-              <span class="public__instagrame-icon">
-                <svg
-                  width="24"
-                  height="24"
-                  viewBox="0 0 24 24"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path d="M17.5034 0H6.49657C2.9143 0 0 2.9143 0 6.49657V17.5036C0 21.0857 2.9143 24 6.49657 24H17.5036C21.0857 24 24 21.0857 24 17.5036V6.49657C24 2.9143 21.0857 0 17.5034 0V0ZM12 18.5623C8.38145 18.5623 5.43767 15.6185 5.43767 12C5.43767 8.38145 8.38145 5.43767 12 5.43767C15.6185 5.43767 18.5623 8.38145 18.5623 12C18.5623 15.6185 15.6185 18.5623 12 18.5623ZM18.7192 6.98528C17.6499 6.98528 16.7801 6.11553 16.7801 5.04619C16.7801 3.97686 17.6499 3.10693 18.7192 3.10693C19.7885 3.10693 20.6585 3.97686 20.6585 5.04619C20.6585 6.11553 19.7885 6.98528 18.7192 6.98528Z" fill="black">
-                    <path d="M12 6.84473C9.15745 6.84473 6.84465 9.15734 6.84465 12.0001C6.84465 14.8426 9.15745 17.1554 12 17.1554C14.8427 17.1554 17.1553 14.8426 17.1553 12.0001C17.1553 9.15734 14.8427 6.84473 12 6.84473Z" fill="black">
-                      <path d="M18.7192 4.51416C18.4259 4.51416 18.1871 4.75293 18.1871 5.04626C18.1871 5.3396 18.4259 5.57837 18.7192 5.57837C19.0127 5.57837 19.2515 5.33978 19.2515 5.04626C19.2515 4.75275 19.0127 4.51416 18.7192 4.51416Z" fill="black">
-                </svg>
-              </span>
+        <div class="footer__content--top">
+          <div class="footer__content--top--left">
+            <div class="footer__visualization">
+              <a href="#" class="footer__logo logo"></a>
+              <div class="footer__public public">
+                <a href="http://www.facebook.com/namu-museum" class="public__icon public__facebook"></a>
+                <a href="http://www.instagram.com/namu-museum" class="public__icon public__instagrame"></a>
+              </div>
+            </div>
+            <div class="footer__info">
+              <div class="footer__schedule schedule">
+                <p class="schedule__heading">Графік роботи</p>
+                <p class="schedule__time"><span class="schedule__time--bold">12:00 — 20:00 </span>середа</p>
+                <p class="schedule__time"><span class="schedule__time--bold">12:00 — 20:00 </span>четвер</p>
+                <p class="schedule__time"><span class="schedule__time--bold">12:00 — 20:00 </span>п’ятниця</p>
+                <p class="schedule__time"><span class="schedule__time--bold">11:00 — 19:00 </span>субота</p>
+                <p class="schedule__time"><span class="schedule__time--bold">11:00 — 19:00 </span>неділя</p>
+                <p class="schedule__info">Вихідні понеділок,<br> вівторок<br>Каса припиняє роботу<br> за 1 годину<br>до закриття музею</p>
+              </div>
+              <div class="footer__contact contacts">
+                <p class="contacts__heading">Контакти:</p>
+                <p class="contacts__address">вул. М. Грушевського, 6;<br> Київ, 01001</p>
+                <p class="contacts__phone"><a href="tel:+380442781357" class="contacts__link">тел. +38 (044) 278-13-57</a></p>
+                <p class="contacts__fax"><a href="fax:+380442787454" class="contacts__link">факс +38 (044) 278-74-54</a></p>
+                <p class="contacts__mail"><a href="mailto:info@namu.kiev.ua" class="contacts__link">e-mail: info@namu.kiev.ua</a></p>
+              </div>
             </div>
           </div>
-          <div class="footer__schedule schedule">
-            <p class="schedule__heading">Графік роботи</p>
-            <p class="schedule__time"><span class="schedule__time--bold">12:00 — 20:00 </span>середа</p>
-            <p class="schedule__time"><span class="schedule__time--bold">12:00 — 20:00 </span>четвер</p>
-            <p class="schedule__time"><span class="schedule__time--bold">12:00 — 20:00 </span>п’ятниця</p>
-            <p class="schedule__time"><span class="schedule__time--bold">11:00 — 19:00 </span>субота</p>
-            <p class="schedule__time"><span class="schedule__time--bold">11:00 — 19:00 </span>неділя</p>
-            <p class="schedule__info">Вихідні понеділок,<br> вівторок<br>Каса припиняє роботу<br> за 1 годину<br>до закриття музею</p>
+          <div class="footer__content--top--right">
+            <nav class="footer__nav nav">
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a href="#" class="nav__link">Галерея</a>
+                </li>
+                <li class="nav__item">
+                  <a href="#" class="nav__link">Про Нас</a>
+                </li>
+                <li class="nav__item">
+                  <a href="#" class="nav__link">Виставки та події</a>
+                </li>
+                <li class="nav__item">
+                  <a href="#" class="nav__link">Магазин</a>
+                </li>
+                <li class="nav__item">
+                  <a href="#" class="nav__link">Відвідування</a>
+                </li>
+                <li class="nav__item">
+                  <a href="#" class="nav__link">Блог</a>
+                </li>
+                <li class="nav__item">
+                  <a href="#" class="nav__link">Стати нашим другом</a>
+                </li>
+                <li class="nav__item">
+                  <a href="#" class="nav__link">Контакти</a>
+                </li>
+              </ul>
+            </nav>
           </div>
-          <div class="footer__contact contacts">
-            <div class="contacts__heading">Контакти:</div>
-            <p class="contacts__address">вул. Грушевського, 6;<br> Київ, 01001</p>
-            <p class="contacts__phone"><a href="tel:+380442781357" class="contacts__link">тел. +38 (044) 278-13-57</a></p>
-            <p class="contacts__fax"><a href="tel:+380442787454" class="contacts__link">факс +38 (044) 278-74-54</a></p>
-            <p class="contacts__mail"><a href="mail:info@namu.kiev.ua" class="contacts__link">e-mail: info@namu.kiev.ua</a></p>
-          </div>
-          <div class="footer__copyright">Copyright © 2019. All Rights Reserved.</div>
         </div>
-        <div class="footer__content--right">
-          <nav class="footer__nav nav">
-            <ul class="nav__list">
-              <li class="nav__item">
-                <a href="#" class="nav__link">Галерея</a>
-              </li>
-              <li class="nav__item">
-                <a href="#" class="nav__link">Про Нас</a>
-              </li>
-              <li class="nav__item">
-                <a href="#" class="nav__link">Виставки та події</a>
-              </li>
-              <li class="nav__item">
-                <a href="#" class="nav__link">Магазин</a>
-              </li>
-              <li class="nav__item">
-                <a href="#" class="nav__link">Відвідування</a>
-              </li>
-              <li class="nav__item">
-                <a href="#" class="nav__link">Блог</a>
-              </li>
-              <li class="nav__item">
-                <a href="#" class="nav__link">Стати нашим другом</a>
-              </li>
-              <li class="nav__item">
-                <a href="#" class="nav__link">Контакти</a>
-              </li>
-            </ul>
-          </nav>
-          <div class="footer__designed">
-            Designed by Zhyriada Marina
-          </div>
+        <div class="footer__content--bottom">
+          <p class="footer__copyright">Copyright © 2019. All Rights Reserved.</p>
+          <p class="footer__designed">Designed by Zhyriada Marina</p>
         </div>
       </div>
     </footer>
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
