--- a/src/index.html
+++ b/src/index.html
@@ -77,7 +77,7 @@
             <p class="event__text">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
           </div>
         </article>
-        <article class="main__event--reverse event">
+        <article class="main__event event event--reverse">
           <div class="event__info event__info--gap">
             <p class="event__type">Виставка<span class="event__date">26.08-29.11.2019</span>
             </p>
