--- a/src/index.html
+++ b/src/index.html
@@ -85,6 +85,79 @@
         </button>
       </form>
     </header>
+    <main class="main">
+      <section class="announcements">
+        <h2 class="announcements__header">Актуальні події</h2>
+
+        <div class="annonucements__exhibition exhibition exhibition--go-and-come-back">
+          <img
+            src="./images/announcements/go-and-return.png"
+            alt=""
+            class="exhibition__image"
+          >
+
+          <div class="exhibition__text">
+            <div class="exhibition__caption caption">
+              <div class="caption__name">Виставка</div>
+              <div class="caption__date">26.08-29.11.2019</div>
+            </div>
+
+            <h3 class="exhibition__header">
+              Йду і повертаюсь
+              <div class="exhibition__decoration"></div>
+            </h3>
+
+            <p class="exhibition__description">
+              Національний Художній Музей України презентує унікальну частину колекції Градобанку
+              - українське мистецтво другої половини 1980-1995 років.
+            </p>
+
+          </div>
+        </div>
+
+        <div class="annonucements__exhibition exhibition exhibition--memories-and-dreams">
+          <img
+            src="./images/announcements/memories-dreams.png"
+            alt=""
+            class="exhibition__image"
+          >
+
+          <div class="exhibition__text exhibition__text--memories-and-dreams">
+            <div class="exhibition__caption caption">
+              <div class="caption__name">Виставка</div>
+              <div class="caption__date">26.08-29.11.2019</div>
+            </div>
+
+            <h3 class="exhibition__header">
+              І спогади і мрії
+              <div class="exhibition__decoration"></div>
+            </h3>
+            <p class="exhibition__description">
+              Національний художній музей України до 100 річчя від дня народження
+              видатної української художниці Тетяни Яблонської відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            </p>
+          </div>
+        </div>
+
+        <div class="annonucements__lecture lecture">
+          <img
+          src="./images/announcements/lecture.png"
+          alt=""
+          class="lecture__image">
+
+          <div class="lecture__description">
+            <div class="lecture__caption caption">
+              <div class="caption__name">Лекція</div>
+              <div class="caption__date">26/08/2019 - 11:00</div>
+            </div>
+
+            <h3 class="lecture__header">
+              Від класицизму до романтизму
+            </h3>
+          </div>
+        </div>
+      </section>
+    </main>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
