--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@200;400;500;700&family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+    <header class="header">
+      <div class="header__text__museum">
+        <img
+          src="images/header-text.svg"
+          alt="Photo museum"
+          class="header__text"
+        >
+      </div>
+      <div class="header__photo__museum">
+        <img
+          src="images/header-muzej.png"
+          alt="Photo museum"
+          class="header__museum"
+        >
+      </div>
+
+    </header>
+
   </body>
 </html>
