full page, plus some responsive screens

--- a/src/index.html
+++ b/src/index.html
@@ -58,16 +58,15 @@
     <section class="main-events container">
       <h2 class="main-events__header">Актуальні події</h2>
 
-      <div class="main-events__event event">
+      <div class="wrap-event">
 
-        <div class="event__nature-image event__nature-image--first">
+        <img
+          class="cell-fit cell-fit--1"
+          src="./images/RectangleEvent1_870.png"
+          alt=""
+        >
 
-        </div>
-
-
-
-
-        <div class="event__content content">
+        <div class="event__content content content--1">
           <div class="content__type type">
             <p class="type__name">ВИСТАВКА</p>
             <p class="type__date">26.08-29.11.2019</p>
@@ -80,14 +79,13 @@
           </p>
         </div>
 
+        <img
+          class="cell-fit cell-fit--2"
+          src="./images/RectangleEvent2_870.png"
+          alt=""
+        >
 
-
-      </div>
-
-      <div class="main-events__event event">
-
-
-        <div class="event__content content">
+        <div class="event__content content content--2">
           <div class="content__type type">
             <p class="type__name">ВИСТАВКА</p>
             <p class="type__date">26.08-29.11.2019</p>
@@ -96,16 +94,13 @@
           <h3 class="content__header">І спогади і мрії</h3>
           <p class="content__text">
             Національний художній музей України до 100 річчя від дня народження
-            видатної української художниці  Тетяни Яблонської
+            видатної української художниці Тетяни Яблонської
             відкриває ретроспективну ювілейну виставку «І спогади і мрії».
           </p>
         </div>
 
-        <div class="event__nature-image event__nature-image--second">
-
-        </div>
-
       </div>
+
     </section>
 
     <section class="lection">
@@ -127,43 +122,86 @@
 
     </section>
 
+
     <section class="galery container">
       <h2>Галерея</h2>
       <div class="galery__album album">
-        <div class="album__image-cell album__image-cell--1">
-          <img
-            class="album__img"
-            src="./images/Rectangle 13.5.png"
-            alt="">
+        <div class="album__image-cell--1">
+          <picture>
+
+            <source srcset="./images/RectangleEvent(1)1280screen.png" media="(min-width: 1024px)">
+            <img
+              class="cell-fit"
+              src="./images/RectangleEvent(1)1280screen.png"
+              alt=""
+            >
+          </picture>
+
         </div>
-        <div class="album__image-cell album__image-cell--2">
-          <img
-            class="album__img"
-            src="./images/Rectangle 3.1.png"
-            alt=""
-          >
+        <div class="album__image-cell--2">
+          <picture>
+            <source srcset="./images/RectangleEvent(2)1280screen.png" media="(min-width: 1024px)">
+            <img
+              class="cell-fit"
+              src="./images/RectangleEvent(2)1280screen.png"
+              alt=""
+            >
+          </picture>
+
         </div>
-        <div class="album__image-cell album__image-cell--3">
-          <img
-            class="album__img"
-            src="./images/Rectangle 13.3.png"
-            alt=""
-          >
+
+        <div class="album__image-cell--3">
+          <picture>
+            <source srcset="./images/RectangleEvent(3)1280screen.png" media="(min-width: 1024px)">
+            <!-- <source srcset="./images/RectangleEvent(3)1280screen.png" media="(min-width: 1024px)"> -->
+            <img
+              class="cell-fit"
+              src="./images/RectangleEvent(3)1280screen.png"
+              alt=""
+            >
+          </picture>
+
         </div>
-        <div class="album__image-cell album__image-cell--4">
-          <img
-            class="album__img"
-            src="./images/Rectangle 13.4.png"
-            alt=""
-          >
+        <div class="album__image-cell--4">
+          <picture>
+            <source srcset="./images/RectangleEvent(4)1280screen.png" media="(min-width: 1024px)">
+            <img
+              class="cell-fit"
+              src="./images/RectangleEvent(4)1280screen.png"
+              alt=""
+            >
+          </picture>
+
         </div>
-        <!-- <img class="album__image-cell image-cell image-cell--6" src="./images/Rectangle 3.1.png" alt="">
-        <img class="album__image-cell image-cell image-cell--6" src="" alt=""> -->
+        <div class="album__image-cell--5">
+          <picture>
+            <source srcset="./images/RectangleEvent(extra1)1280screen.png" media="(min-width: 1800px)">
+            <img
+              class="cell-fit"
+              src="./images/RectangleEvent(extra1)1280screen.png"
+              alt=""
+            >
+          </picture>
+
+        </div>
+
+        <div class="album__image-cell--6">
+          <picture>
+            <source srcset="./images/RectangleEvent(extra2)1280screen.png" media="(min-width: 1800px)">
+            <img
+              class="cell-fit"
+              src="./images/RectangleEvent(extra2)1280screen.png"
+              alt=""
+            >
+          </picture>
+
+        </div>
+
       </div>
       <div class="tickets__button tickets__button--primary"></div>
     </section>
 
-    <footer>
+    <footer class="footer">
       <section class="footer-top">
         <div class="footer-top__subscribe subscribe">
           <h2 class="subscribe__header">Підписка</h2>
@@ -175,11 +213,119 @@
               class="field__email email"
               type="text"
               placeholder="E-mail"
-              >
+            >
             <div class="field__button tickets__button tickets__button--secondary"></div>
           </div>
         </div>
 
+      </section>
+
+      <section class="footer-bottom container container--inner-padding">
+        <div class="footer-bottom__left-side left-side">
+          <div class="left-side__icons icons">
+            <img
+              class="icons__namu"
+              src="./images/NA MU.svg"
+              alt=""
+            >
+            <div class="icons__network">
+              <a href="#">
+                <img
+                  class="icons__facebook"
+                  src="./images/Facebook.svg"
+                  alt="facebook"
+                >
+              </a>
+              <a href="/insta-link">
+                <img
+                  class="icons__instagram"
+                  src="./images/Vector (1).svg"
+                  alt="instagram"
+                >
+              </a>
+            </div>
+
+          </div>
+
+
+          <div class="shedule">
+            <p class="shedule__header">Графік роботи</p>
+
+            <p class="shedule__days">
+              <span>12:00 — 20:00</span> середа<br>
+              <span>12:00 — 20:00</span> четвер<br>
+              <span>12:00 — 20:00</span> п’ятниця<br>
+              <span>11:00 — 19:00</span> субота<br>
+              <span>11:00 — 19:00</span> неділя<br>
+              <br>
+              Вихідні понеділок,<br>
+              вівторок<br>
+              Каса припиняє роботу <br>
+              за 1 годину<br>
+              до закриття музею
+
+            </p>
+
+
+
+          </div>
+          <div class="shedule">
+            <p class="shedule__header">Контакти:</p>
+
+            <p class="shedule__days">
+              вул. М. Грушевського, 6; Київ, <br>
+              01001 <br>
+              тел. +38 (044) 278-13-57<br>
+              факс +38 (044) 278-74-54<br>
+              e-mail: info@namu.kiev.ua<br>
+
+            </p>
+
+
+
+          </div>
+
+
+        </div>
+
+        <div class="footer-bottom__right-side right-side">
+          <div class="right-side__tabs tabs">
+            <ul class="tabs__list list">
+
+              <li class="list__item item">
+                <a class="item__link link" href="">Галерея</a>
+              </li>
+              <li class="list__item item">
+                <a class="item__link link" href="">Виставки та події</a>
+              </li>
+              <li class="list__item item">
+                <a class="item__link link" href="">Відвідування</a>
+              </li>
+              <li class="list__item item">
+                <a class="item__link link" href="">Стати нашим другом</a>
+              </li>
+
+            </ul>
+          </div>
+
+          <div class="right-side__tabs tabs">
+            <ul class="tabs__list list">
+              <li class="list__item item">
+                <a class="item__link link" href="#">Про Нас</a>
+              </li>
+              <li class="list__item item">
+                <a class="item__link link" href="#">Магазин</a>
+              </li>
+              <li class="list__item item">
+                <a class="item__link link" href="#">Блог</a>
+              </li>
+              <li class="list__item item">
+                <a class="item__link link" href="#">Контакти</a>
+              </li>
+            </ul>
+
+          </div>
+        </div>
       </section>
     </footer>
 
