--- a/src/index.html
+++ b/src/index.html
@@ -12,13 +12,14 @@
   </head>
 
   <body>
-    <header class="header">
+    <header class="header" id="about">
       <div class="header__leftside">
         <div class="header__menu">
           <div class="header__menu-stripe"></div>
           <div class="header__menu-stripe"></div>
           <div class="header__menu-stripe"></div>
         </div>
+        <div class="header__vert-line"><a href="#event">події</a></div>
         <div class="header__center">
           <h1 class="header__name">
             худож<br>музей
@@ -43,7 +44,7 @@
     </header>
 
     <main class="main">
-      <div class="event">
+      <div class="event" id="event">
         <h2 class="event__heading">Актуальні події</h2>
         <div class="event__event1">
           <div class="event__left1">
@@ -100,7 +101,7 @@
         </div>
       </div>
 
-      <div class="gallery">
+      <div id="gallery" class="gallery">
         <h2 class="gallery__heading">Галерея</h2>
         <div class="gallery__pictures">
 
@@ -167,7 +168,7 @@
       </div>
     </main>
 
-    <footer class="footer">
+    <footer class="footer" id="visit">
       <div class="footer__leftside">
         <div class="footer__namu">
           <span class="footer__logo">na<br>mu</span>
@@ -203,18 +204,18 @@
       <div class="footer__rightside">
         <div class="footer__menu-blockleft">
           <p>
-            Галерея<br><br><br>
-            Виставки та події<br><br><br>
-            Відвідування<br><br><br>
-            Стати нашим другом
+            <a class="footer__link" href="#gallery">Галерея</a><br><br><br>
+            <a class="footer__link" href="#event">Виставки та події</a><br><br><br>
+            <a class="footer__link" href="#visit">Відвідування</a><br><br><br>
+            <a class="footer__link" href="#about">Стати нашим другом</a>
           </p>
         </div>
         <div class="footer__menu-blockright">
           <p>
-            Про Нас<br><br><br>
-            Магазин<br><br><br>
-            Блог<br><br><br>
-            Контакти
+            <a class="footer__link" href="#about">Про Нас</a><br><br><br>
+            <a class="footer__link" href="#about">Магазин</a><br><br><br>
+            <a class="footer__link" href="#about">Блог</a><br><br><br>
+            <a class="footer__link" href="#visit">Контакти</a>
           </p>
         </div>
       </div>
