header responsiveness logic was implemented

--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&family=Oswald:wght@300;400&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <header class="header">
+      <div class="wrapper">
+        <div class="header__top">
+          <img
+            src="images\burger.svg"
+            alt="="
+            class="header__burger-img"
+          >
+          <div class="header__logo-text">NA<br>MU</div>
+        </div>
+        <h1 class="header__title">
+          ХУДОЖНІЙ<br>МУЗЕЙ
+        </h1>
+        <a href="#" class="header__link link-button">
+          <img
+            src="images\link-arrow.svg"
+            alt=">"
+            class="link-button__arrow"
+          >
+        </a>
+      </div>
+    </header>
+    <main class="main"></main>
+    <footer class="footer"></footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
