--- a/src/index.html
+++ b/src/index.html
@@ -10,43 +10,53 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <header class="header">
+    <header id="header" class="header">
       <div class="header__content container">
-        <div class="header__menu">
-          <svg
-            width="18"
-            height="12"
-            viewBox="0 0 18 12"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
+        <div class="header__toggler toggler">
+          <input
+            type="checkbox"
+            class="header__toggler-input toggler__input"
+            id="toggler"
           >
-            <path d="M0 12H18V10H0V12ZM0 7H18V5H0V7ZM0 0V2H18V0H0Z" fill="#0F0E08">
-          </svg>
-          <nav class="header__nav">
-          </nav>
+          <label for="toggler" class="toggler__label"></label>
+
+          <div class="header__nav-wrap">
+            <a href="#" class="header__nav-logo logo"></a>
+            <nav class="header__nav nav">
+              <ul class="header__nav-list nav__list">
+                <li class="nav__item">
+                  <a href="#gallery" class="nav__link">Галерея</a>
+                </li>
+                <li class="nav__item">
+                  <a href="#header" class="nav__link">Про Нас</a>
+                </li>
+                <li class="nav__item">
+                  <a href="#events" class="nav__link">Виставки та події</a>
+                </li>
+                <li class="nav__item">
+                  <a href="#header" class="nav__link">Магазин</a>
+                </li>
+                <li class="nav__item">
+                  <a href="#schedule" class="nav__link">Відвідування</a>
+                </li>
+                <li class="nav__item">
+                  <a href="#publics" class="nav__link">Блог</a>
+                </li>
+                <li class="nav__item">
+                  <a href="#subscribe" class="nav__link">Стати нашим другом</a>
+                </li>
+                <li class="nav__item">
+                  <a href="#contacts" class="nav__link">Контакти</a>
+                </li>
+              </ul>
+            </nav>
+            <div class="header__nav-search"></div>
+          </div>
         </div>
-        <div class="header__logo logo"></div>
+
+        <a href="#" class="header__logo logo"></a>
       </div>
     </header>
-
-    <!-- <section>
-      <div class="header__hero-img"></div>
-      <div class="header__menu">
-        <svg
-          width="18"
-          height="12"
-          viewBox="0 0 18 12"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <path d="M0 12H18V10H0V12ZM0 7H18V5H0V7ZM0 0V2H18V0H0Z" fill="#0F0E08">
-        </svg>
-      </div>
-
-      <div class="header__events">
-        <p class="header__text">Події</p>
-      </div>
-    </section> -->
 
     <main class="main">
       <section class="main__hero main__hero--gap hero container">
@@ -63,7 +73,7 @@
         </div>
       </section>
 
-      <section class="main__events main__events--gap container">
+      <section id="events" class="main__events main__events--gap container">
         <h2 class="main__current-title title">Актуальні події</h2>
         <article class="main__event event">
           <img
@@ -99,7 +109,7 @@
         </article>
       </section>
 
-      <section class="main__gallery main__gallery--gap gallery">
+      <section id="gallery" class="main__gallery main__gallery--gap gallery">
         <div class="gallery__content container">
           <h3 class="gallery__title title">Галерея</h3>
           <div class="gallery__image">
@@ -160,7 +170,7 @@
         </div>
       </section>
 
-      <section class="main__subscribe main__subscribe--gap  subscribe">
+      <section id="subscribe" class="main__subscribe main__subscribe--gap  subscribe">
         <div class="subscribe__info container">
           <h3 class="subscribe__title title">Підписка</h3>
           <p class="subscribe__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
@@ -172,6 +182,7 @@
                 name="email"
                 placeholder="E-mail"
                 id="email"
+                required
               >
             </label>
             <button class="subscribe__button button button--red"></button>
@@ -186,13 +197,25 @@
           <div class="footer__content--top--left">
             <div class="footer__visualization">
               <a href="#" class="footer__logo logo"></a>
-              <div class="footer__public public">
-                <a href="http://www.facebook.com/namu-museum" class="public__icon public__facebook"></a>
-                <a href="http://www.instagram.com/namu-museum" class="public__icon public__instagrame"></a>
+              <div id="publics" class="footer__public public">
+                <a
+                  href="http://www.facebook.com/namu-museum"
+                  target="_blank"
+                  rel="noopener"
+                  class="public__icon public__facebook"
+                >
+                </a>
+                <a
+                  href="http://www.instagram.com/namu-museum"
+                  target="_blank"
+                  rel="noopener"
+                  class="public__icon public__instagrame"
+                >
+                </a>
               </div>
             </div>
             <div class="footer__info">
-              <div class="footer__schedule schedule">
+              <div id="schedule" class="footer__schedule schedule">
                 <p class="schedule__heading">Графік роботи</p>
                 <p class="schedule__time"><span class="schedule__time--bold">12:00 — 20:00 </span>середа</p>
                 <p class="schedule__time"><span class="schedule__time--bold">12:00 — 20:00 </span>четвер</p>
@@ -201,9 +224,18 @@
                 <p class="schedule__time"><span class="schedule__time--bold">11:00 — 19:00 </span>неділя</p>
                 <p class="schedule__info">Вихідні понеділок,<br> вівторок<br>Каса припиняє роботу<br> за 1 годину<br>до закриття музею</p>
               </div>
-              <div class="footer__contact contacts">
+              <div id="contacts" class="footer__contact contacts">
                 <p class="contacts__heading">Контакти:</p>
-                <p class="contacts__address">вул. М. Грушевського, 6;<br> Київ, 01001</p>
+                <p class="contacts__address">
+                  <a
+                    href="https://goo.gl/maps/5RJUHnux5xExxixq5"
+                    target="_blank"
+                    rel="noopener"
+                    class="contacts__link"
+                  >
+                    вул. М. Грушевського, 6;<br> Київ, 01001
+                  </a>
+                </p>
                 <p class="contacts__phone"><a href="tel:+380442781357" class="contacts__link">тел. +38 (044) 278-13-57</a></p>
                 <p class="contacts__fax"><a href="fax:+380442787454" class="contacts__link">факс +38 (044) 278-74-54</a></p>
                 <p class="contacts__mail"><a href="mailto:info@namu.kiev.ua" class="contacts__link">e-mail: info@namu.kiev.ua</a></p>
@@ -212,30 +244,30 @@
           </div>
           <div class="footer__content--top--right">
             <nav class="footer__nav nav">
-              <ul class="nav__list">
+              <ul class="footer__nav-list nav__list">
                 <li class="nav__item">
-                  <a href="#" class="nav__link">Галерея</a>
+                  <a href="#gallery" class="nav__link">Галерея</a>
                 </li>
                 <li class="nav__item">
-                  <a href="#" class="nav__link">Про Нас</a>
+                  <a href="#header" class="nav__link">Про Нас</a>
                 </li>
                 <li class="nav__item">
-                  <a href="#" class="nav__link">Виставки та події</a>
+                  <a href="#events" class="nav__link">Виставки та події</a>
                 </li>
                 <li class="nav__item">
-                  <a href="#" class="nav__link">Магазин</a>
+                  <a href="#header" class="nav__link">Магазин</a>
                 </li>
                 <li class="nav__item">
-                  <a href="#" class="nav__link">Відвідування</a>
+                  <a href="#schedule" class="nav__link">Відвідування</a>
                 </li>
                 <li class="nav__item">
-                  <a href="#" class="nav__link">Блог</a>
+                  <a href="#publics" class="nav__link">Блог</a>
                 </li>
                 <li class="nav__item">
-                  <a href="#" class="nav__link">Стати нашим другом</a>
+                  <a href="#subscribe" class="nav__link">Стати нашим другом</a>
                 </li>
                 <li class="nav__item">
-                  <a href="#" class="nav__link">Контакти</a>
+                  <a href="#contacts" class="nav__link">Контакти</a>
                 </li>
               </ul>
             </nav>
