page without header block

--- a/src/index.html
+++ b/src/index.html
@@ -248,7 +248,7 @@
           </div>
 
 
-          <div class="shedule">
+          <div class="shedule shedule--padding">
             <p class="shedule__header">Графік роботи</p>
 
             <p class="shedule__days">
