galery was created

--- a/src/index.html
+++ b/src/index.html
@@ -157,6 +157,97 @@
           </div>
         </div>
       </section>
+
+      <section class="galery">
+        <h2 class="galery__header">Галерея</h2>
+
+        <div class="galery__images">
+          <img
+            src="/images/gallery/img1.png"
+            alt=""
+            class="galery__image galery__image--1"
+          >
+
+          <img
+            src="/images/gallery/img2.png"
+            alt=""
+            class="galery__image galery__image--2"
+          >
+
+          <img
+            src="/images/gallery/img3.png"
+            alt=""
+            class="galery__image galery__image--3"
+          >
+
+          <img
+            src="/images/gallery/img4.png"
+            alt=""
+            class="galery__image galery__image--4"
+          >
+
+          <img
+            src="/images/gallery/img5.png"
+            alt=""
+            class="galery__image galery__image--5"
+          >
+
+          <img
+            src="/images/gallery/img6.png"
+            alt=""
+            class="galery__image galery__image--6"
+          >
+
+
+          <button class="galery__button galery__button--mobile-left">
+            <svg
+              width="8"
+              height="12"
+              viewBox="0 0 8 12"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path d="M7.41 10.59L2.83 6L7.41 1.41L6 0L0 6L6 12L7.41 10.59Z" fill="black">
+              </path>
+            </svg>
+          </button>
+
+          <button class="galery__button galery__button--mobile-right">
+            <svg
+              width="8"
+              height="12"
+              viewBox="0 0 8 12"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path d="M0.590088 10.59L5.17009 6L0.590088 1.41L2.00009 0L8.00009 6L2.00009 12L0.590088 10.59Z" fill="black">
+              </path>
+            </svg>
+          </button>
+
+        </div>
+
+        <div class="galery__dots">
+          <div class="galery__dot galeru__dot--active"></div>
+          <div class="galery__dot"></div>
+          <div class="galery__dot"></div>
+          <div class="galery__dot"></div>
+        </div>
+
+        <button class="galery__button galery__button--desktop">
+          <svg
+            width="8"
+            height="12"
+            viewBox="0 0 8 12"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path d="M0.59 10.59L5.17 6L0.59 1.41L2 0L8 6L2 12L0.59 10.59Z" fill="#D7DDE3">
+            </path>
+          </svg>
+        </button>
+
+      </section>
     </main>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
