--- a/src/index.html
+++ b/src/index.html
@@ -14,12 +14,21 @@
   <body>
     <header class="header" id="about">
       <div class="header__leftside">
-        <div class="header__menu">
-          <div class="header__menu-stripe"></div>
-          <div class="header__menu-stripe"></div>
-          <div class="header__menu-stripe"></div>
+        <div id="menuToggle">
+          <input type="checkbox">
+          <span></span>
+          <span></span>
+          <span></span>
+          <ul id="menu">
+            <a href="#about"><li>Про нас</li></a>
+            <a href="#event"><li>Виставки та події</li></a>
+            <a href="#gallery"><li>Галерея</li></a>
+            <a href="#visit"><li>Блог</li></a>
+            <a href="#visit"><li>Контакти</li></a>
+          </ul>
         </div>
-        <div class="header__vert-line"><a href="#event">події</a></div>
+
+        <div class="header__vert-line"><a href="#event"></a>події</div>
         <div class="header__center">
           <h1 class="header__name">
             худож<br>музей
