--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,57 @@
         </a>
       </div>
     </header>
-    <main class="main"></main>
+    <main class="main">
+      <section class="current-events">
+        <div class="wrapper">
+          <h2 class="current-events__title">
+            Актуальні події
+          </h2>
+          <div class="current-events__top">
+            <div class="current-events__top-visual">
+              <img
+                src="images\current-events-img.jpg"
+                alt="picture"
+                class="current-events__top-visual-img"
+              >
+            </div>
+            <div class="current-events__top-text">
+              <div class="current-events__top-text-note">
+                <span class="current-events__top-text-note-title">ВИСТАВКА</span>
+                <span class=" current-events__top-text-note-date">26.08-29.11.2019</span>
+              </div>
+              <h3 class="current-events__top-text-title">
+                Йду і повертаюсь
+              </h3>
+              <p class="current-events__top-text-paragraph">
+                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+              </p>
+            </div>
+          </div>
+          <div class="current-events__bottom">
+            <div class="current-events__bottom-text">
+              <div class="current-events__bottom-text-note">
+                <span class="current-events__bottom-text-note-title">ВИСТАВКА</span>
+                <span class="current-events__bottom-text-note-date">26.08-29.11.2019</span>
+              </div>
+              <h3 class="current-events__bottom-text-title">
+                І спогади і мрії
+              </h3>
+              <p class="current-events__bottom-text-paragraph">
+                Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+            <div class="current-events__bottom-visual">
+              <img
+                src="images\current-events-img2.jpg"
+                alt="picture"
+                class="current-events__bottom-visual-img"
+              >
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer class="footer"></footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
