subscription block was added

--- a/src/index.html
+++ b/src/index.html
@@ -248,6 +248,38 @@
         </button>
 
       </section>
+
+      <section class="subscription">
+        <h2 class="subscription__header">
+          Підписка
+        </h2>
+
+        <p class="subscription__description">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </p>
+
+        <form action="" class="subscription__form">
+          <input
+            type="email"
+            class="subscription__input"
+            placeholder="E-mail"
+            required
+          >
+
+          <button class="subscription__button">
+            <svg
+              width="8"
+              height="12"
+              viewBox="0 0 8 12"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path d="M0.590088 10.59L5.17009 6L0.590088 1.41L2.00009 0L8.00009 6L2.00009 12L0.590088 10.59Z" fill="black">
+              </path>
+            </svg>
+          </button>
+        </form>
+      </section>
     </main>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
