--- a/src/index.html
+++ b/src/index.html
@@ -10,23 +10,69 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@200;400;500;700&family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
   </head>
   <body>
-    <header class="header">
-      <div class="header__text__museum">
-        <img
-          src="images/header-text.svg"
-          alt="Photo museum"
-          class="header__text"
-        >
-      </div>
-      <div class="header__photo__museum">
-        <img
-          src="images/header-muzej.png"
-          alt="Photo museum"
-          class="header__museum"
-        >
-      </div>
+<!--    <header class="header">-->
+<!--    </header>-->
 
-    </header>
+  <main>
+    <div class="container">
+      <section class="section">
+        <div class="current-events">
+          <h2 class="title__events">Актуальні події</h2>
+          <div class="return">
+            <div class="return__img">
+              <img
+                src="images/developments/current-events1.png"
+                alt="picture"
+                class="return__img__picture"
+              >
+            </div>
+            <div class="return__text">
+              <h5 class="exhibition-day">ВИСТАВКА
+                <span class="exhibition-day__span">
+                  26.08-29.11.2019
+                </span>
+              </h5>
+              <div class="name">
+                <h3 class="name__picture">Йду і повертаюсь</h3>
+                <div class="name__picture__rectangle"></div>
+              </div>
+              <p class="text-picture">Національний Художній Музей України презентує
+                унікальну частину колекції Градобанку -<br>
+                українське мистецтво другої половини<br>
+                1980-1995 років.
+              </p>
+            </div>
+          </div>
+
+          <div class="dreams">
+            <div class="dreams__text">
+              <h5 class="exhibition-day">ВИСТАВКА
+                <span class="exhibition-day__span">
+                26.08-29.11.2019
+              </span>
+              </h5>
+              <div class="name">
+                <h3 class="name__picture">І спогади і мрії</h3>
+                <div class="name__picture__rectangle"></div>
+              </div>
+              <p class="text-picture">
+                Національний художній музей України до 100
+                річчя від дня народження   видатної української
+                художниці  Тетяни Яблонської  відкриває
+                ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+            <div class="dreams__img">
+              <img
+                src="images/developments/current-events2.png"
+                alt="picture"
+                class="dreams__img__picture"
+              >
+            </div>
+        </div>
+      </section>
+    </div>
+  </main>
 
   </body>
 </html>
