big problem in the header

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
           </aside>
 
           <aside class="sidebar__menu-image menu-image">
-            <div class="menu-image__block block">
+            <div class="menu-image__block block block--desktop">
 
               <h1 class="menu-image__text">ХУДОЖ<span>НІЙ</span>
                 <br>
@@ -56,6 +56,19 @@
     </section>
 
     <section class="main-events container">
+      <div class="menu-image__block block block--mobile">
+
+        <h1 class="menu-image__text">ХУДОЖНІЙ
+          <br>
+              МУЗЕЙ
+        </h1>
+        <div class="tickets">
+          <div class="tickets__option option">
+            <p class="option__text"> КВИТКИ</p>
+          </div>
+          <div class="tickets__button tickets__button--primary"></div>
+        </div>
+      </div>
       <h2 class="main-events__header">Актуальні події</h2>
 
       <div class="wrap-event">
@@ -131,7 +144,7 @@
 
             <source srcset="./images/RectangleEvent(1)1280screen.png" media="(min-width: 1024px)">
             <img
-              class="cell-fit"
+              class="cell-fit cell-fit--size"
               src="./images/RectangleEvent(1)1280screen.png"
               alt=""
             >
@@ -142,7 +155,7 @@
           <picture>
             <source srcset="./images/RectangleEvent(2)1280screen.png" media="(min-width: 1024px)">
             <img
-              class="cell-fit"
+              class="cell"
               src="./images/RectangleEvent(2)1280screen.png"
               alt=""
             >
