--- a/src/index.html
+++ b/src/index.html
@@ -79,6 +79,17 @@
             </div>
           </div>
         </div>
+        <div class="wrapper current-events__main-wrapper">
+          <div class="current-events__main">
+            <div class="current-events__main-text">
+              <div class="current-events__main-text-notes">
+                <span class="current-events__main-text-notes-title">ЛЕКЦІЯ</span>
+                <span class="current-events__main-text-notes-date">26/08/2019 - 11:00</span>
+              </div>
+              <h3 class="current-events__main-text-title">Від класицизму до романтизму</h3>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
     <footer class="footer"></footer>
