--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,9 @@
           </ul>
         </div>
 
-        <div class="header__vert-line"><a href="#event"></a>події</div>
+        <div class="header__vert-line">
+          <a href="#event">події</a>
+        </div>
         <div class="header__center">
           <h1 class="header__name">
             худож<br>музей
