--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,8 @@
   <body class="page">
     <script type="text/javascript" src="scripts/main.js"></script>
 
-    <div class="container">
+    <div class="container page__container">
+
       <header class="header container__header">
         <div class="header__burger burger">
           <span class="burger-menu"></span>
@@ -73,9 +74,13 @@
       <div class="current container__current">
         <h2 class="current__event">Актуальні події</h2>
         <div class="current__block">
-          <div class="current__block-photo1">
-            <img src="./images/Rectangle 2.1.svg" alt="Живопис з колекції Градобанку">
-          </div>
+
+          <img
+            src="./images/Rectangle 2.1.svg"
+            alt="Живопис з колекції Градобанку"
+            class="current__block-photo1"
+          >
+
           <div class="current__block-exhibition1 show">
             <p class="show__event">Виставка</p>
             <p class="show__date">26.08-29.11.2019</p>
@@ -94,9 +99,13 @@
               відкриває ретроспективну ювілейну виставку «І спогади і мрії».
             </p>
           </div>
-          <div class="current__block-photo2">
-            <img src="./images/Rectangle 4.1.svg" alt="Живопис Тетяни Яблонської">
-          </div>
+
+          <img
+            src="./images/Rectangle 4.1.svg"
+            class="current__block-photo2"
+            alt="Живопис Тетяни Яблонської"
+          >
+
         </div>
       </div>
 
@@ -122,14 +131,26 @@
             class="gallery__photo2"
           >
           <img
-            src="./images/photo3.svg"
+            src="./images/photo5.svg"
             alt="park"
             class="gallery__photo3"
           >
           <img
-            src="./images/photo4.svg"
+            src="./images/photo3.svg"
             alt="sea"
             class="gallery__photo4"
+          >
+
+          <img
+            src="./images/photo4.svg"
+            alt="sea"
+            class="gallery__photo5"
+          >
+
+          <img
+            src="./images/photo6.svg"
+            alt="sea"
+            class="gallery__photo6"
           >
         </div>
         <div class="gallery__switch"></div>
@@ -166,11 +187,11 @@
             Графік роботи
           </div>
           <div class="footer__schedule-times">
-            <span class="footer__schedule-time">12:00— 20:00 </span>середа
-            <span class="footer__schedule-time">12:00— 20:00 </span>четвер
-            <span class="footer__schedule-time">12:00 — 20:00 </span>п’ятниця
-            <span class="footer__schedule-time">11:00 — 19:00 </span>субота
-            <span class="footer__schedule-time">11:00 — 19:00 </span>неділя
+            <span class="footer__schedule-time">12:00— 20:00 </span>середа<br>
+            <span class="footer__schedule-time">12:00— 20:00 </span>четвер<br>
+            <span class="footer__schedule-time">12:00 — 20:00 </span>п’ятниця<br>
+            <span class="footer__schedule-time">11:00 — 19:00 </span>субота<br>
+            <span class="footer__schedule-time">11:00 — 19:00 </span>неділя<br>
           </div>
           <div class="footer__schedule-content">
             Вихідні понеділок, вівторок
