--- a/src/index.html
+++ b/src/index.html
@@ -21,47 +21,51 @@
       <header class="header container__header">
         <div class="header__burger burger">
           <span class="burger-menu"></span>
+          <nav class="header__nav2">
+            <ul class="nav2__list">
+              <li class="nav2__item">
+                <a href="#" class="nav2__link">Галерея</a>
+              </li>
+              <li class="nav2__item">
+                <a href="#" class="nav2__link">Виставка та події</a>
+              </li>
+              <li class="nav2__item">
+                <a href="#" class="nav2__link">Відвудування</a>
+              </li>
+              <li class="nav2__item">
+                <a href="#" class="nav2__link">Стати нашим другом</a>
+              </li>
+              <li class="nav2__item">
+                <a href="#" class="nav2__link">Про Нас</a>
+              </li>
+              <li class="nav2__item">
+                <a href="#" class="nav2__link">Магазин</a>
+              </li>
+              <li class="nav2__item">
+                <a href="#" class="nav2__link">Блог</a>
+              </li>
+              <li class="nav2__item">
+                <a href="#" class="nav2__link">Контакти</a>
+              </li>
+            </ul>
+          </nav>
         </div>
+
         <h1 class="header__logo">
           NA
           MU
         </h1>
-        <nav class="nav header__nav">
-          <ul class="nav__list">
-            <li class="nav__item">
-              <a href="#" class="nav__link">Галерея</a>
-            </li>
-            <li class="nav__item">
-              <a href="#" class="nav__link">Виставка та події</a>
-            </li>
-            <li class="nav__item">
-              <a href="#" class="nav__link">Відвудування</a>
-            </li>
-            <li class="nav__item">
-              <a href="#" class="nav__link">Стати нашим другом</a>
-            </li>
-            <li class="nav__item">
-              <a href="#" class="nav__link">Про Нас</a>
-            </li>
-            <li class="nav__item">
-              <a href="#" class="nav__link">Магазин</a>
-            </li>
-            <li class="nav__item">
-              <a href="#" class="nav__link">Блог</a>
-            </li>
-            <li class="nav__item">
-              <a href="#" class="nav__link">Контакти</a>
-            </li>
-          </ul>
-        </nav>
+
+
+
       </header>
 
       <div class="cutaway container__cutaway">
         <div class="cutaway__image">
           <h1 class="cutaway__image-name">ХУДОЖ<span class="cutaway__image-transparent">НІЙ</span> МУЗЕЙ</h1>
           <div class="cutaway__ticket">
-            <div class="cutaway__ticket-text">КВИТКИ</div>
-            <div class="cutaway__ticket-button"></div>
+            <a href="#bottom" class="cutaway__ticket-text">КВИТКИ</a>
+            <a href="#bottom" class="cutaway__ticket-button"></a>
           </div>
           <div class="cutaway__decor">
             ПОДІЇ
@@ -157,6 +161,7 @@
       </div>
 
       <div class="sub container__sub">
+        <a href="#" name="bottom"></a>
         <div class="sub__name">Підписка</div>
         <div class="sub__description">Бути в курсі всіх актуальних подій
           та останніх новин.
@@ -174,10 +179,10 @@
 
       <footer class="footer container__footer">
         <div class="footer__logos">
-          <h1 class="footer__logos-logo">
+          <a class="footer__logos-logo">
             NA
             MU
-          </h1>
+          </a>
           <div class="footer__logos-facebook"></div>
           <div class="footer__logos-instagram"></div>
         </div>
