added requested changes & favicon icon

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NAMU</title>
+    <link rel="icon" type="image/png" href="images/favicon.png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -67,7 +68,7 @@
         </div>
         <div class="hero__content-right">
           <div class="hero__info">
-            <h1 class="hero__title">Худож<span class="hero__title--white">ній</span><br>музей</h1>
+            <h1 class="hero__title">Худож<span class="hero__title--transparent">ній</span><br>музей</h1>
             <a href="#" class="hero__link">Квитки<span class="hero__button button"></span></a>
           </div>
         </div>
@@ -144,7 +145,6 @@
               class="gallery__image--6"
             >
           </div>
-          <button class="gallery__button button"></button>
           <div class="gallery__radio radio">
             <input
               type="radio"
