block gallery was added

--- a/src/index.html
+++ b/src/index.html
@@ -91,6 +91,75 @@
           </div>
         </div>
       </section>
+      <section class="gallery">
+        <div class="wrapper">
+          <h2 class="gallery__title">Галерея</h2>
+          <div class="gallery__picture-set">
+            <div class="gallery__picture-set-top">
+              <img
+                src="images\gallery-top1.jpg"
+                class="gallery__picture-set-top-img1"
+                alt="picture"
+              >
+              <img
+                src="images\gallery-top2.jpg"
+                class="gallery__picture-set-top-img2"
+                alt="picture"
+              >
+              <img
+                src="images\gallery-top3.jpg"
+                class="gallery__picture-set-top-img3"
+                alt="picture"
+              >
+              <div class="gallery__nav-circle gallery__nav-circle--left">
+                <img
+                src="images\gallery-nav-circle-arrow.svg"
+                alt=">"
+                class="gallery__nav-circle-arrow"
+              >
+              </div>
+              <div class="gallery__nav-circle gallery__nav-circle--right">
+                <img
+                src="images\gallery-nav-circle-arrow.svg"
+                alt=">"
+                class="gallery__nav-circle-arrow"
+              >
+              </div>
+            </div>
+            <div class="gallery__picture-set-bottom">
+              <img
+                src="images\gallery-bottom1.jpg"
+                class="gallery__picture-set-bottom-img1"
+                alt="picture"
+              >
+              <img
+                src="images\gallery-bottom2.jpg"
+                class="gallery__picture-set-bottom-img2"
+                alt="picture"
+              >
+              <img
+                src="images\gallery-bottom3.jpg"
+                class="gallery__picture-set-bottom-img3"
+                alt="picture"
+              >
+            </div>
+          </div>
+          <a href="#" class="gallery__link-button link-button">
+            <img
+              src="images\link-arrow.svg"
+              alt=">"
+              class="link-button__arrow"
+            >
+          </a>
+          <div class="gallery__slider-set">
+            <div class="gallery__slider-set-item gallery__slider-set-item--active"></div>
+            <div class="gallery__slider-set-item"></div>
+            <div class="gallery__slider-set-item"></div>
+            <div class="gallery__slider-set-item"></div>
+            <div class="gallery__slider-set-item"></div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="footer"></footer>
     <script type="text/javascript" src="scripts/main.js"></script>
