--- a/src/index.html
+++ b/src/index.html
@@ -160,6 +160,33 @@
           </div>
         </div>
       </section>
+      <section class="subscription">
+        <div class="wrapper subscription__wrapper">
+          <h2 class="subscription__title">
+            Підписка
+          </h2>
+          <p class="subscription__text">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </p>
+          <form action="" class="subscription__form">
+            <input
+            type="email"
+            name="user-email"
+            placeholder="E-Mail"
+            class="subscription__form-mail"
+            required
+            autocomplete="off"
+            >
+            <button class="subscription__form-button link-button">
+              <img
+                src="images\gallery-nav-circle-arrow.svg"
+                alt=">"
+                class="subscription__form-button-img link-button__arrow"
+              >
+            </button>
+          </form>
+        </div>
+      </section>
     </main>
     <footer class="footer"></footer>
     <script type="text/javascript" src="scripts/main.js"></script>
