--- a/src/index.html
+++ b/src/index.html
@@ -102,36 +102,36 @@
               <div class="gallery__picture__important">
                 <img
                   src="images/gallery/1.png"
-                  alt=""
                   class="important__img"
+                  alt="Picture"
                 >
                 <img
                   src="images/gallery/2.png"
-                  alt=""
-                  class="important__img"
+                  class="important__img important__img--second"
+                  alt="Picture"
                 >
                 <img
                   src="images/gallery/3.png"
-                  alt=""
                   class="important__img"
+                  alt="Picture"
                 >
               </div>
 
               <div class="gallery__picture__secondary">
                 <img
                   src="images/gallery/4.png"
-                  alt=""
                   class="secondary__img"
+                  alt="Picture"
                 >
                 <img
                   src="images/gallery/5.png"
-                  alt=""
-                  class="secondary__img"
+                  class="secondary__img important__img--second"
+                  alt="Picture"
                 >
                 <img
                   src="images/gallery/6.png"
-                  alt=""
                   class="secondary__img"
+                  alt="Picture"
                 >
               </div>
             </div>
@@ -148,7 +148,7 @@
           >
 
           <div class="subscription__text">
-            <h2 class="title__events subscription__title">Підписка</h2>
+            <h2 class="title subscription__title">Підписка</h2>
             <p class="subscription__paragraph">
               Бути в курсі всіх актуальних подій та останніх новин.
             </p>
